[tool.poetry]
name = "Data-Structures"
version = "0.1.0"
description = ""
authors = ["Amundeep Singh <amundeep@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7.9"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
